# makimono

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  prek.toml  pyproject.toml  zensical.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docs.yml  latest-changes.yml  zizmor.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yaml
crates/makimono/: Cargo.toml
crates/makimono-node/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
crates/makimono-node/src/: lib.rs
crates/makimono-node/test/: generate-content.test.js
crates/makimono-py/: Cargo.toml  pyproject.toml
crates/makimono-py/src/: lib.rs
crates/makimono-py/tests/: test_generate_content.py
crates/makimono/src/: config.rs  lib.rs
scripts/: bump.sh
