[package]
name = "makimono-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Node.js bindings for makimono"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "pymakimono"

[dependencies]
makimono = { path = "../makimono" }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
