[package]
name = "makimono"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["geyerandreas <andreas@qbitone.de>"]
description = "A tool for creating changelog content during development."
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
regex = "1.12.3"

[dev-dependencies]
indoc = "2.0.7"
